task/build-arch-specific-image/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: secret-test-pod
spec:
 containers:
   - image: mplatform/manifest-tool:v1.0.3
     name: test-container
     command: [ "manifest-tool" ]
