task/build-arch-specific-image/eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-webapp-eventlistener
spec:
  port:
    targetPort: 8082
  to:
    kind: Service
    name: el-sample-webapp-listener
    weight: 100i
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
